--- a/src/main/resources/templates/directors/show-directors.html
+++ b/src/main/resources/templates/directors/show-directors.html
@@ -2,19 +2,44 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
+
     <title>All Directors</title>
 </head>
 <body>
 
-<!-- Add table to show directors -->
-<table class="table table-bordered table-striped">
-    <tbody>
-    <tr th:each="temopDirector : ${directors}">
-        <td th:text="${temopDirector.firstName}" />
-        <td th:text="${temopDirector.lastName}" />
-    </tr>
-    </tbody>
-</table>
+<div th:insert="~{fragments/nav-bar :: navigation}"></div>
+
+<div class="container-fluid">
+    <h3> All Directors </h3>
+    <hr>
+
+    <!-- Add table to show directors -->
+    <table class="table table-bordered table-striped">
+        <thead class="table-dark">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Date Of Birth</th>
+<!--            <th>Action</th>-->
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="temopDirector : ${directors}">
+            <td th:text="${temopDirector.firstName}" />
+            <td th:text="${temopDirector.lastName}" />
+            <td th:text="${temopDirector.dateOfBirth}" />
+<!--            <td>Show More</td>-->
+        </tr>
+        </tbody>
+    </table>
+
+</div>
+
+<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 </html>
