--- a/src/main/resources/templates/directors/show-directors.html
+++ b/src/main/resources/templates/directors/show-directors.html
@@ -23,7 +23,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Date Of Birth</th>
-<!--            <th>Action</th>-->
+            <th>Actions</th>
         </tr>
         </thead>
 
@@ -32,7 +32,10 @@
             <td th:text="${temopDirector.firstName}" />
             <td th:text="${temopDirector.lastName}" />
             <td th:text="${temopDirector.dateOfBirth}" />
-<!--            <td>Show More</td>-->
+            <td>
+                <a th:href="@{'/directors/' + ${temopDirector.directorId}}"
+                   class="btn btn-dark btn-sm" th:text="More" />
+            </td>
         </tr>
         </tbody>
     </table>
