--- a/src/main/resources/templates/directors/show-directors.html
+++ b/src/main/resources/templates/directors/show-directors.html
@@ -36,12 +36,15 @@
             <td th:text="${temopDirector.dateOfBirth}" />
             <td>
                 <a th:href="@{'/directors/' + ${temopDirector.directorId}}"
-                   class="btn btn-dark btn-sm" th:text="More" />
+                   class="btn btn-dark btn-sm" th:text="'More'" />
 
                 <button class="btn btn-sm btn-danger delete-director-button"
                         th:attr="data-director-id=${temopDirector.directorId}">
                     Delete
                 </button>
+
+                <a th:href="@{'/directors/update/' + ${temopDirector.directorId}}"
+                   class="btn btn-sm btn-info" th:text="'Update'" />
             </td>
         </tr>
         </tbody>
