--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -11,14 +11,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/movies/show}" th:text="Movies" />
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" th:text="'Movies'" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" />
+                        <ul class="dropdown-menu">
+                            <li><a class="nav-link" th:href="@{/movies/show}" th:text="'All Movies'" /></li>
+                            <li><a class="nav-link" th:href="@{/movies/search}" th:text="'Serach Movies'" /></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" th:text="'Directors'" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" />
+                        <ul class="dropdown-menu">
+                            <li><a class="nav-link" th:href="@{/directors/show}" th:text="'All Directors'" /></li>
+                            <li><a class="nav-link" th:href="@{/directors/add}" th:text="'Add Directors'" /></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/directors/show}" th:text="Directors" />
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/studios/show}" th:text="Studios" />
+                        <a class="nav-link" th:href="@{/studios/show}" th:text="'Studios'" />
                     </li>
                 </ul>
             </div>
