--- a/src/main/resources/templates/directors/updateDirector.html
+++ b/src/main/resources/templates/directors/updateDirector.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
+    <link href="/css/customcss.css" rel="stylesheet" />
 
     <script th:src="@{/js/updateDirector.js}" defer></script>
 
@@ -16,12 +17,15 @@
 
 
 <div class="container-fluid">
-    <h3>Update Director</h3>
+    <div class="pt-2 text-center">
+        <h3>Update Director</h3>
+    </div>
     <hr>
 
     <form id="update-director-form">
 
-        <div class="input-group mb-3 w-25">
+        <div class="container col-md-4 pt-3">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'First Name'" />
             <input
                     type="text"
@@ -33,7 +37,7 @@
             >
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Last Name'" />
             <input
                     type="text"
@@ -45,7 +49,7 @@
             >
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Date of birth'" />
             <input
                     type="text"
@@ -57,7 +61,7 @@
             >
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Nationality'" />
             <input
                     type="text"
@@ -69,7 +73,7 @@
             >
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Height'" />
             <input
                     type="text"
@@ -80,8 +84,10 @@
                     th:value="${director.height}"
             >
         </div>
-
-        <button class="btn btn-dark col-1 disabled" type="submit">Update</button>
+            <div class="container text-center">
+            <button class="btn btn-dark disabled" id="update-button" type="submit">Update</button>
+            </div>
+        </div>
     </form>
 
 </div>
