--- a/src/main/resources/templates/movies/searchMovies.html
+++ b/src/main/resources/templates/movies/searchMovies.html
@@ -14,7 +14,9 @@
 <div th:insert="~{fragments/nav-bar :: navigation}"></div>
 
 <main class="container">
-    <h3>Search Movies</h3>
+    <div class="pt-2">
+        <h3>Search Movies</h3>
+    </div>
     <hr>
 
     <div class="mb-3">
