updated logic in updateDirector.js

--- a/src/main/resources/templates/directors/updateDirector.html
+++ b/src/main/resources/templates/directors/updateDirector.html
@@ -22,7 +22,7 @@
     </div>
     <hr>
 
-    <form id="update-director-form">
+    <form id="update-director-form" th:attr="director-id=${director.directorId}">
 
         <div class="container col-md-4 pt-3">
         <div class="input-group mb-3">
