--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,26 +11,38 @@
 <body>
 
 <main class="container">
-  <h1>Login</h1>
+  <form class="form-default vh-100" th:action="@{/login}" method="POST">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
 
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb breadcrumb-chevron p-3 bg-body-tertiary rounded-3">
-      <li class="breadcrumb-item active title" aria-current="page">Login</li>
-    </ol>
-  </nav>
+              <div class="mb-md-5 mt-md-4 pb-5">
 
-  <form th:action="@{/login}" method="POST">
-    <div class="pb-3">
-      <label for="username" class="form-label">Username</label>
-      <input id="username" name="username" class="form-control" type="text">
+                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                <p class="text-white-50 mb-5">Please enter your login and password!</p>
+
+                <div data-mdb-input-init class="form-outline form-white mb-4">
+                  <input type="text" name="username" id="usernameid" class="form-control form-control-lg" />
+                  <label class="form-label" for="usernameid">Email</label>
+                </div>
+
+                <div data-mdb-input-init class="form-outline form-white mb-4">
+                  <input type="password" name="password" id="passwordid" class="form-control form-control-lg" />
+                  <label class="form-label" for="passwordid">Password</label>
+                </div>
+
+                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="pb-3">
-      <label for="password" class="form-label">Password</label>
-      <input id="password" name="password" class="form-control" type="password">
-    </div>
-    <button type="submit" class="btn btn-primary">Log in</button>
   </form>
 </main>
-<th:block th:insert="~{fragments/layout :: footer}"/>
 </body>
 </html>
