--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,37 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
+  <link rel="stylesheet" href="/css/customcss.css" />
 
   <title>Login Page</title>
 </head>
-<body>
+<body class="gradient-bg">
 
 <main class="container">
   <form class="form-default vh-100" th:action="@{/login}" method="POST">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card glass text-white" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
 
               <div class="mb-md-5 mt-md-4 pb-5">
 
                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                <p class="text-white-50 mb-5">Please enter your username and password</p>
 
-                <div data-mdb-input-init class="form-outline form-white mb-4">
+                <div class="form-outline form-white mb-4"> <!-- data-mdb-input-init ??? -->
                   <input type="text" name="username" id="usernameid" class="form-control form-control-lg" />
-                  <label class="form-label" for="usernameid">Email</label>
+                  <label class="form-label" for="usernameid">Username</label>
                 </div>
 
-                <div data-mdb-input-init class="form-outline form-white mb-4">
+                <div class="form-outline form-white mb-4">
                   <input type="password" name="password" id="passwordid" class="form-control form-control-lg" />
                   <label class="form-label" for="passwordid">Password</label>
                 </div>
 
-                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button> <!-- data-mdb-button-init data-mdb-ripple-init ????-->
 
               </div>
+              <p class="btn footer-sm-text">Register new account</p>
 
             </div>
           </div>
