--- a/src/main/resources/templates/directors/show-directors.html
+++ b/src/main/resources/templates/directors/show-directors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Date Of Birth</th>
-            <th>Actions</th>
+            <th sec:authorize="isAuthenticated()">Actions</th>
         </tr>
         </thead>
 
@@ -34,7 +34,7 @@
             <td th:text="${temopDirector.firstName}" />
             <td th:text="${temopDirector.lastName}" />
             <td th:text="${temopDirector.dateOfBirth}" />
-            <td>
+            <td sec:authorize="isAuthenticated()">
                 <a th:href="@{'/directors/' + ${temopDirector.directorId}}"
                    class="btn btn-dark btn-sm" th:text="'More'" />
 
