--- a/src/main/resources/templates/movies/searchMovies.html
+++ b/src/main/resources/templates/movies/searchMovies.html
@@ -6,11 +6,13 @@
 
     <th:block th:insert="~{fragments/heading :: heading}" />
 
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
+    <script th:src="@{/js/bundle-site.js}" defer></script>
+    <script th:src="@{/js/bundle-searchMovie.js}" defer></script>
+
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}" />
 
     <title>Search Movies</title>
 
-    <script th:src="@{/js/searchMovie.js}"></script>
 </head>
 <body>
 <div th:insert="~{fragments/nav-bar :: navigation}"></div>
@@ -28,8 +30,5 @@
 
     <div id="search-results"></div>
 </main>
-
-<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
-
 </body>
 </html>
