--- a/src/main/resources/templates/directors/addDirector.html
+++ b/src/main/resources/templates/directors/addDirector.html
@@ -6,12 +6,10 @@
 
     <th:block th:insert="~{fragments/heading :: heading}" />
 
-<!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
-<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <script th:src="@{/js/bundle-addDirector.js}" defer></script>
+    <script th:src="@{/js/bundle-site.js}" defer></script>
 
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
-
-    <script th:src="@{/js/addDirector.js}" type="module"></script>
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}" />
 
     <title>Add Director</title>
 </head>
@@ -55,8 +53,6 @@
     </form>
 
 </div>
-
-<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 </html>
