--- a/src/main/resources/templates/directors/single-director.html
+++ b/src/main/resources/templates/directors/single-director.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
+    <script th:src="@{/js/bundle-site.js}" defer></script>
+
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}" />
+
     <title>Director information</title>
 </head>
 <body>
@@ -52,7 +55,5 @@
         </div>
     </div>
 </div>
-
-<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
