--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
-    <link rel="stylesheet" href="/css/customcss.css" />
+    <script th:src="@{/js/bundle-site.js}" defer></script>
+    <script th:src="@{/js/bundle-login_register.js}" defer></script>
+
+    <link rel="stylesheet" th:href="@{/css/bundle-login_register.css}" />
+
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}" />
 
     <title>Registration Page</title>
 </head>
