--- a/src/main/resources/templates/studios/show-studios.html
+++ b/src/main/resources/templates/studios/show-studios.html
@@ -6,7 +6,9 @@
 
     <th:block th:insert="~{fragments/heading :: heading}" />
 
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
+    <script th:src="@{/js/bundle-site.js}" defer></script>
+
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}" />
 
     <title>All Studios</title>
 </head>
@@ -40,8 +42,5 @@
     </table>
 
 </div>
-
-<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
-
 </body>
 </html>
