--- a/src/main/resources/templates/directors/updateDirector.html
+++ b/src/main/resources/templates/directors/updateDirector.html
@@ -18,12 +18,11 @@
 
 <div th:insert="~{fragments/nav-bar :: navigation}"></div>
 
-
 <div class="container-fluid">
-    <div class="pt-2 text-center">
+
+    <div class="pt-3 pb-2 text-center">
         <h3>Update Director</h3>
     </div>
-    <hr>
 
     <form id="update-director-form" th:attr="director-id=${director.directorId}">
 
