--- a/src/main/resources/templates/movies/searchMovies.html
+++ b/src/main/resources/templates/movies/searchMovies.html
@@ -18,10 +18,9 @@
 <div th:insert="~{fragments/nav-bar :: navigation}"></div>
 
 <main class="container">
-    <div class="pt-2">
+    <div class="pt-3 pb-2 text-center">
         <h3>Search Movies</h3>
     </div>
-    <hr>
 
     <div class="mb-3">
         <label for="search" class="form-label">Start typing to search...</label>
