--- a/src/main/resources/templates/directors/addDirector.html
+++ b/src/main/resources/templates/directors/addDirector.html
@@ -19,38 +19,44 @@
 
 
 <div class="container-fluid">
-    <h3>Add Director</h3>
-    <hr>
 
+    <div class="pt-3 pb-2 text-center">
+        <h3>Add Director</h3>
+    </div>
+
+    <div class="container col-md-4 pt-3">
     <form id="add-director-form">
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'First Name'" />
             <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Phil">
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Last Name'" />
             <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Mahar">
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Date of birth'" />
             <input type="text" class="form-control" id="dob" name="dob" placeholder="dd-mm-yyyy">
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Nationality'" />
             <input type="text" class="form-control" id="nationality" name="nationality" placeholder="UK">
         </div>
 
-        <div class="input-group mb-3 w-25">
+        <div class="input-group mb-3">
             <span class="input-group-text" th:text="'Height'" />
             <input type="text" class="form-control" id="height" name="height" placeholder="180">
         </div>
 
-        <button class="btn btn-dark col-1" type="submit">Submit</button>
+        <div class="container text-center">
+            <button class="btn btn-dark" type="submit">Submit</button>
+        </div>
     </form>
+    </div>
 
 </div>
 
