--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -11,19 +11,25 @@
             </button>
             <div class="collapse navbar-collapse ms-3" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown me-1">
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown me-1">
                         <a class="nav-link dropdown-toggle" th:text="'Movies'" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" />
                         <ul class="dropdown-menu">
                             <li><a class="nav-link" th:href="@{/movies/show}" th:text="'All Movies'" /></li>
                             <li><a class="nav-link" th:href="@{/movies/search}" th:text="'Serach Movies'" /></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown me-1">
+                    <li sec:authorize="!isAuthenticated()" class="nav-item me-1">
+                        <a class="nav-link" th:href="@{/movies/show}" th:text="'Movies'" />
+                    </li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown me-1">
                         <a class="nav-link dropdown-toggle" th:text="'Directors'" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" />
                         <ul class="dropdown-menu">
                             <li><a class="nav-link" th:href="@{/directors/show}" th:text="'All Directors'" /></li>
-                            <li><a class="nav-link" th:href="@{/directors/add}" th:text="'Add Directors'" /></li>
+                            <li><a sec:authorize="hasAnyRole('EDITOR', 'ADMIN')" class="nav-link" th:href="@{/directors/add}" th:text="'Add Directors'" /></li>
                         </ul>
+                    </li>
+                    <li sec:authorize="!isAuthenticated()" class="nav-item me-1">
+                        <a class="nav-link" th:href="@{/directors/show}" th:text="'Directors'" />
                     </li>
                     <li class="nav-item me-1">
                         <a class="nav-link" th:href="@{/studios/show}" th:text="'Studios'" />
@@ -31,17 +37,27 @@
                 </ul>
             </div>
             <div class="nav-item float-end ms-1">
-                <a sec:authorize="!isAuthenticated()" class="btn btn-outline-success me-2 p-1" th:href="@{/login}" th:text="'Login'" />
-                <a sec:authorize="!isAuthenticated()" class="btn btn-outline-dark me-2 p-1" href="/" th:text="'Register'" />
+<!--                <button type="button" class="btn btn-outline-light me-2 p-1" th:href="@{/login}" th:text="'Login'"> <a class="p-3"></a></button>-->
+<!--                <a sec:authorize="!isAuthenticated()" class="btn btn-outline-light me-2 p-1" th:href="@{/login}" th:text="'Login'" />-->
+                <a sec:authorize="!isAuthenticated()" class="btn btn-outline-light me-2 p-1" th:href="@{/login}" >
+                    <span class="p-3" th:text="'Login'" />
+                </a>
+                <a sec:authorize="!isAuthenticated()" class="btn btn-outline-dark me-2 p-1" href="/">
+                    <span class="p-3" th:text="'Register'" />
+                </a>
                 <div class="dropdown me-3" sec:authorize="isAuthenticated()">
-                    <button type="button" class="btn btn-light dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside" th:text="${#authentication.principal.email}"></button>
+                    <button type="button" class="btn btn-outline-light dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                        <span class="p-3" th:text="${#authentication.principal.email}" />
+                    </button>
                     <div class="dropdown-menu dropdown-menu-lg-end p-4">
                         <span class="dropdown-item mb-3" th:text="'Username: ' + ${#authentication.name}"></span>
                         <span class="dropdown-item mb-3" th:text="'Email: ' + ${#authentication.principal.email}"></span>
                         <div class="text-center"> <!-- dropdown-item???? -->
                             <form th:action="@{/logout}" method="POST">
                                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                                <button type="submit" sec:authorize="isAuthenticated()" id="logout-button" class="btn btn-outline-dark me-2 p-1" th:text="'Logout'"></button>
+                                <button type="submit" sec:authorize="isAuthenticated()" id="logout-button" class="btn btn-outline-dark me-2 p-1">
+                                    <span class="p-3" th:text="'Logout'" />
+                                </button>
                             </form>
 <!--                            <a sec:authorize="isAuthenticated()" class="btn btn-outline-dark me-2 p-1" th:href="@{/logout}" th:text="'Logout'" />-->
                         </div>
