--- a/src/main/resources/templates/studios/show-studios.html
+++ b/src/main/resources/templates/studios/show-studios.html
@@ -17,19 +17,21 @@
 <div th:insert="~{fragments/nav-bar :: navigation}"></div>
 
 <div class="container-fluid">
-    <h3> All Studios </h3>
-    <hr>
+
+    <div class="pt-3 pb-2 text-center">
+        <h3>All Studios</h3>
+    </div>
 
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
-        <tr>
+        <tr class="text-center">
             <th>Studio Name</th>
             <th>Location</th>
             <th sec:authorize="isAuthenticated()">Actions</th>
         </tr>
         </thead>
 
-        <tbody>
+        <tbody class="text-center">
         <tr th:each="temopStudio : ${studios}">
             <td th:text="${temopStudio.name}" />
             <td th:text="${temopStudio.location}" />
