--- a/src/main/scss/site.scss
+++ b/src/main/scss/site.scss
@@ -1,4 +1,5 @@
 // use variables as * --> HERE! <--
+@import "variables_bg";
 @import "~bootswatch/dist/morph/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/morph/bootswatch";
